--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 						<h2><b>Bandoli Ceremony</b></h2>
 						<h4>17 January 2025 at 9:00 pm</h4>
 						<p>Join us for the Bandoli Ceremony as we celebrate the beginning of our wedding festivities. Your presence will add joy to this special occasion.</p>
-						<a href="#" target="_blank">See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+						<a href="https://www.google.com/maps/place/25%C2%B049'38.5%22N+72%C2%B015'37.9%22E/@25.8273714,72.2579505,17z/data=!3m1!4b1!4m4!3m3!8m2!3d25.8273714!4d72.2605254?hl=en&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
