--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<nav class="navbar header-nav navbar-expand-lg">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<!-- <img src="images/logo.png" alt="image"> -->
+					<!-- <img src="./logo.jpg" alt="image" width="140"> -->
 					 <h1>Nikhil ❤️ Nikita</h1>
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-wd"
@@ -118,7 +118,7 @@
 							<div class="col-lg-4 col-md-6 col-sm-12">
 								<div class="about-m">
 									<div class="about-img">
-										<img class="img-fluid" src="images/14.jpeg" alt="" />
+										<img class="img-fluid" src="images/po/111.jpg" alt="" />
 									</div>
 									<ul>
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -141,7 +141,7 @@
 							<div class="col-lg-4 col-md-6 col-sm-12">
 								<div class="about-m">
 									<div class="about-img">
-										<img class="img-fluid" src="images/5.jpeg" alt="" />
+										<img class="img-fluid" src="images/ls/666.jpg" alt="" />
 									</div>
 									<ul>
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -187,9 +187,9 @@
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 item">
 						<div class="caption">
 							<div class="star center-block">
-								<span class="h3">01</span>
-								<span>March </span>
-								<span>2017</span>
+								<span class="h3">10</span>
+								<span>July</span>
+								<span>2022</span>
 							</div>
 							<div class="image">
 								<img src="images/6.jpeg" alt="" />
@@ -507,34 +507,34 @@
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="event-inner">
 						<div class="event-img">
-							<img class="img-fluid" src="images/event-img-01.jpg" alt="" />
+							<img class="img-fluid" src="images/ls/233.jpg" alt="" />
 						</div>
 						<h2><b>Bandoli Ceremony</b></h2>
 						<h4>17 January 2025 at 9:00 pm</h4>
 						<p>Join us for the Bandoli Ceremony as we celebrate the beginning of our wedding festivities. Your presence will add joy to this special occasion.</p>
-						<a href="https://www.google.com/maps/place/25%C2%B049'38.5%22N+72%C2%B015'37.9%22E/@25.8273714,72.2579505,17z/data=!3m1!4b1!4m4!3m3!8m2!3d25.8273714!4d72.2605254?hl=en&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+						<a href="https://www.google.com/maps/place/25%C2%B049'38.5%22N+72%C2%B015'37.9%22E/@25.8273714,72.2579505,17z/data=!3m1!4b1!4m4!3m3!8m2!3d25.8273714!4d72.2605254?hl=en&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" >See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="event-inner">
 						<div class="event-img">
-							<img class="img-fluid" src="images/event-img-02.jpg" alt="" />
+							<img class="img-fluid" src="images/po/66.jpg" alt="" />
 						</div>
 						<h2><b>Wedding Ceremony</b></h2>
 						<h4>18 January 2025 at 2:40 pm</h4>
 						<p>We invite you to witness the union of our souls in the sacred Wedding Ceremony. Your blessings and presence will make this day even more memorable.</p>
-						<a href="#" target="_blank">See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+						<a href="#" >See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="event-inner">
 						<div class="event-img">
-							<img class="img-fluid" src="images/event-img-03.jpg" alt="" />
+							<img class="img-fluid" src="images/Rajasthani wedding food (1).png" alt="" />
 						</div>
 						<h2><b>Reception Ceremony</b></h2>
 						<h4>20 January 2025 at 6:00 pm</h4>
 						<p>Celebrate with us at the Reception Ceremony as we embark on this new journey together. We look forward to sharing this joyous evening with you.</p>
-						<a href="#" target="_blank">See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+						<a href="https://www.google.com/maps?q=25.8255074,72.2589901&z=17&hl=en" >See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
 					</div>
 				</div>
 			</div>
