--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 item">
 						<div class="caption">
 							<div class="star center-block">
-								<span class="h3">10</span>
-								<span>July</span>
-								<span>2022</span>
+								<span class="h3">27</span>
+								<span>Dec</span>
+								<span>2021</span>
 							</div>
 							<div class="image">
 								<img src="images/6.jpeg" alt="" />
@@ -199,16 +199,16 @@
 							</div>
 							<div class="textContent">
 								<p class="lead">We met at the wedding of our close friends and immediately found a
-									common language, so a year later our first date happened.</p>
+									common language, so a half year later our first date happened.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 item">
 						<div class="caption">
 							<div class="star center-block">
-								<span class="h3">03</span>
-								<span>April</span>
-								<span>2017</span>
+								<span class="h3">10</span>
+								<span>July</span>
+								<span>2025</span>
 							</div>
 							<div class="image">
 								<img src="images/8.jpeg" alt="" />
