--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<!-- Site Metas -->
-	<title>Sweetwedding - Responsive OnePage HTML5 Template</title>
+	<title>Niki Niki Top Top</title>
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -174,7 +174,7 @@
 				<div class="col-lg-12">
 					<div class="title-box">
 						<h2>Our Story</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+						<p>A journey of love and togetherness. </p>
 					</div>
 				</div>
 			</div>
@@ -499,7 +499,7 @@
 				<div class="col-lg-12">
 					<div class="title-box">
 						<h2>Events</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+						<p>Your presence and blessings will make our celebration truly special.</p>
 					</div>
 				</div>
 			</div>
@@ -537,6 +537,7 @@
 						<a href="https://www.google.com/maps?q=25.8255074,72.2589901&z=17&hl=en" >See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
 					</div>
 				</div>
+				<p class="thankyou">"Your presence will make our celebration complete. Thank you for being a part of our special day and for your love and support."</p>
 			</div>
 		</div>
 	</div>
