--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 	<!-- LOADER -->
 	<div id="preloader">
 		<div class="preloader pulse">
-			<h3>Nikhil & Nikita</h3>
+			<!-- <h3>Nikhil & Nikita</h3> -->
+			<h3>Niki Niki Top Top</h3>
 		</div>
 	</div><!-- end loader -->
 	<!-- END LOADER -->
@@ -130,10 +131,8 @@
 							<div class="col-lg-8 col-md-6 col-sm-12">
 								<h2> <i class="fa fa-heart-o" aria-hidden="true"></i> <span>Nikhil (Nitesh)</span> <i
 										class="fa fa-heart-o" aria-hidden="true"></i></h2>
-								<p>Fusce convallis ante id purus sagittis malesuada. Sed erat ipsum, suscipit sit amet
-									auctor quis, vehicula ut leo. Maecenas felis nulla, tincidunt ac blandit a,
-									consectetur quis elit. Nulla ut magna eu purus cursus sagittis. Praesent fermentum
-									tincidunt varius. Proin sit amet tempus magna. Fusce pellentesque vulputate urna.
+								<p>
+									Hello, I'm Nikhil. As I embark on this beautiful journey of marriage, I am filled with joy and excitement. I have a Bachelor of Arts degree and run my own business. Beyond my professional life, I am also a national-level athlete specializing in the 100 and 200-meter sprints. Balancing my passion for sports and my entrepreneurial journey has been incredibly rewarding. I strive for excellence in everything I do, whether it's on the track or in the boardroom. I am thrilled to start this new chapter with the love of my life by my side.
 								</p>
 							</div>
 						</div>
@@ -153,10 +152,8 @@
 							<div class="col-lg-8 col-md-6 col-sm-12">
 								<h2> <i class="fa fa-heart-o" aria-hidden="true"></i> <span>Nikita</span> <i
 										class="fa fa-heart-o" aria-hidden="true"></i></h2>
-								<p>Fusce convallis ante id purus sagittis malesuada. Sed erat ipsum, suscipit sit amet
-									auctor quis, vehicula ut leo. Maecenas felis nulla, tincidunt ac blandit a,
-									consectetur quis elit. Nulla ut magna eu purus cursus sagittis. Praesent fermentum
-									tincidunt varius. Proin sit amet tempus magna. Fusce pellentesque vulputate urna.
+								<p>
+									Hi, I'm Nikita. I graduated with a Bachelor of Arts degree and have since pursued my passion for fashion design and makeup artistry. I love creating unique and stylish looks that make people feel confident and beautiful. My journey in the fashion industry has been incredibly fulfilling, and I strive to bring creativity and elegance to everything I do. As I step into this new phase of life, I am excited to share it with my wonderful partner.
 								</p>
 							</div>
 						</div>
@@ -217,8 +214,7 @@
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">We met at the wedding of our close friends and immediately found a
-									common language, so a year later our first date happened.</p>
+								<p class="lead">After our initial meeting at our friends' wedding, We met at a cozy café, shared stories, and laughed. It was the perfect start to our journey together.</p>
 							</div>
 						</div>
 					</div>
