nikhil weds nikita website almost completed

--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@
 	<!-- Start Banner -->
 	<div class="home-slider">
 		<ul class="rslides">
-			<li><img src="images/6.jpeg" alt=""></li>
-			<li><img src="images/11.jpeg" alt=""></li>
-			<li><img src="images/8.jpeg" alt=""></li>
-			<li><img src="images/12.jpeg" alt=""></li>
+			<li><img src="images/slider pictures/1.jpg" alt=""></li>
+			<li><img src="images/slider pictures/2.jpg" alt=""></li>
+			<li><img src="images/slider pictures/3.jpeg" alt=""></li>
+			<li><img src="images/slider pictures/4.jpg" alt=""></li>
+			<li><img src="images/slider pictures/5.jpg" alt=""></li>
+			<li><img src="images/slider pictures/6.jpg" alt=""></li>
 		</ul>
 		<div class="lbox-details">
 			<h1>Nikhil & Nikita </h1>
@@ -119,7 +121,7 @@
 							<div class="col-lg-4 col-md-6 col-sm-12">
 								<div class="about-m">
 									<div class="about-img">
-										<img class="img-fluid" src="images/po/111.jpg" alt="" />
+										<img class="img-fluid" src="images/profile and events picture/1.jpg" alt="" />
 									</div>
 									<ul>
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -140,7 +142,7 @@
 							<div class="col-lg-4 col-md-6 col-sm-12">
 								<div class="about-m">
 									<div class="about-img">
-										<img class="img-fluid" src="images/ls/666.jpg" alt="" />
+										<img class="img-fluid" src="images/profile and events picture/2.jpg" alt="" />
 									</div>
 									<ul>
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -184,12 +186,12 @@
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 item">
 						<div class="caption">
 							<div class="star center-block">
-								<span class="h3">27</span>
-								<span>Dec</span>
+								<span class="h3">07</span>
+								<span>Oct</span>
 								<span>2021</span>
 							</div>
 							<div class="image">
-								<img src="images/6.jpeg" alt="" />
+								<img src="images/slider pictures/7.jpg" alt="" />
 								<div class="title">
 									<h2>First Meet <i class="fa fa-angle-right" aria-hidden="true"></i></h2>
 								</div>
@@ -203,37 +205,36 @@
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 item">
 						<div class="caption">
 							<div class="star center-block">
-								<span class="h3">10</span>
-								<span>July</span>
-								<span>2025</span>
+								<span class="h3">15</span>
+								<span>March</span>
+								<span>2022</span>
 							</div>
 							<div class="image">
-								<img src="images/8.jpeg" alt="" />
+								<img src="images/slider pictures/8.jpg" alt="" />
 								<div class="title">
 									<h2>First date <i class="fa fa-angle-right" aria-hidden="true"></i></h2>
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">After our initial meeting at our friends' wedding, We met at a cozy café, shared stories, and laughed. It was the perfect start to our journey together.</p>
+								<p class="lead">After our initial meeting at our friends' wedding, We met at Aadharsh Stadium when I was there for an athletic event. We shared stories and laughed. It was the perfect start to our journey together.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 item">
 						<div class="caption">
 							<div class="star center-block">
-								<span class="h3">03</span>
-								<span>May</span>
-								<span>2017</span>
+								<span class="h3">15</span>
+								<span>March</span>
+								<span>2022</span>
 							</div>
 							<div class="image">
-								<img src="images/11.jpeg" alt="" />
+								<img src="images/slider pictures/9.jpeg" alt="" />
 								<div class="title">
 									<h2>Proposal <i class="fa fa-angle-right" aria-hidden="true"></i></h2>
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">We met at the wedding of our close friends and immediately found a
-									common language, so a year later our first date happened.</p>
+								<p class="lead">On our first date at Aadharsh Stadium, I won a medal in athletics. Filled with joy and excitement, I proposed to her right there. It was a magical moment that marked the beginning of our beautiful journey together.</p>
 							</div>
 						</div>
 					</div>
@@ -241,18 +242,17 @@
 						<div class="caption">
 							<div class="star center-block">
 								<span class="h3">04</span>
-								<span>June</span>
-								<span>2017</span>
+								<span>April</span>
+								<span>2022</span>
 							</div>
 							<div class="image">
-								<img src="images/12.jpeg" alt="" />
+								<img src="images/slider pictures/10.jpg" alt="" />
 								<div class="title">
 									<h2>Engagement <i class="fa fa-angle-right" aria-hidden="true"></i></h2>
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">For 2 years of work as support engineer responsible about installing and
-									maintenance SWIFT packages for banks. I gain a lot from it before i leave country.
+								<p class="lead">We celebrated our engagement surrounded by our loving families. It was a joyous occasion filled with love, laughter, and the promise of a beautiful future together.
 								</p>
 							</div>
 						</div>
@@ -265,15 +265,13 @@
 								<span>2025</span>
 							</div>
 							<div class="image">
-								<img src="images/Nikhil & Nikita wedding logo without background.png" alt="" />
+								<img src="images/slider pictures/11.jpg" alt="" />
 								<div class="title">
 									<h2>My Wedding <i class="fa fa-angle-right" aria-hidden="true"></i></h2>
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">Since then i came to Austria as refugee far from my lovers and friends
-									far a way escaping from wars and threats searching a new life that i didn't find
-									until yet.</p>
+								<p class="lead">On 18 January 2025, we will be tying the knot and beginning our lifelong journey together. Surrounded by our loved ones, we look forward to celebrating this special day filled with love, joy, and cherished memories.</p>
 							</div>
 						</div>
 					</div>
@@ -503,7 +501,7 @@
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="event-inner">
 						<div class="event-img">
-							<img class="img-fluid" src="images/ls/233.jpg" alt="" />
+							<img class="img-fluid" src="images/profile and events picture/9.jpg" alt="" />
 						</div>
 						<h2><b>Bandoli Ceremony</b></h2>
 						<h4>17 January 2025 at 9:00 pm</h4>
@@ -514,7 +512,7 @@
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="event-inner">
 						<div class="event-img">
-							<img class="img-fluid" src="images/po/66.jpg" alt="" />
+							<img class="img-fluid" src="images/profile and events picture/4.jpg" alt="" />
 						</div>
 						<h2><b>Wedding Ceremony</b></h2>
 						<h4>18 January 2025 at 2:40 pm</h4>
@@ -525,7 +523,7 @@
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="event-inner">
 						<div class="event-img">
-							<img class="img-fluid" src="images/Rajasthani wedding food (1).png" alt="" />
+							<img class="img-fluid" src="images/profile and events picture/6.jpg" alt="" />
 						</div>
 						<h2><b>Reception Ceremony</b></h2>
 						<h4>20 January 2025 at 6:00 pm</h4>
