nikhil weds nikita website completed

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="event-inner">
 						<div class="event-img">
-							<img class="img-fluid" src="images/profile and events picture/9.jpg" alt="" />
+							<img class="img-fluid" src="images/profile and events picture/5.jpg" alt="" />
 						</div>
 						<h2><b>Bandoli Ceremony</b></h2>
 						<h4>17 January 2025 at 9:00 pm</h4>
@@ -517,7 +517,7 @@
 						<h2><b>Wedding Ceremony</b></h2>
 						<h4>18 January 2025 at 2:40 pm</h4>
 						<p>We invite you to witness the union of our souls in the sacred Wedding Ceremony. Your blessings and presence will make this day even more memorable.</p>
-						<a href="#" >See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+						<a href="https://maps.app.goo.gl/hV8KTYXdqk9HUm2YA" >See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
