nikhil weds nikita website completed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
 					<!-- <img src="./logo.jpg" alt="image" width="140"> -->
-					 <h1>Nikhil ❤️ Nikita</h1>
+					<h1>Nikhil ❤️ Nikita</h1>
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-wd"
 					aria-controls="navbar-wd" aria-expanded="false" aria-label="Toggle navigation">
@@ -134,7 +134,13 @@
 								<h2> <i class="fa fa-heart-o" aria-hidden="true"></i> <span>Nikhil (Nitesh)</span> <i
 										class="fa fa-heart-o" aria-hidden="true"></i></h2>
 								<p>
-									Hello, I'm Nikhil. As I embark on this beautiful journey of marriage, I am filled with joy and excitement. I have a Bachelor of Arts degree and run my own business. Beyond my professional life, I am also a national-level athlete specializing in the 100 and 200-meter sprints. Balancing my passion for sports and my entrepreneurial journey has been incredibly rewarding. I strive for excellence in everything I do, whether it's on the track or in the boardroom. I am thrilled to start this new chapter with the love of my life by my side.
+									Hello, I'm Nikhil. As I embark on this beautiful journey of marriage, I am filled
+									with joy and excitement. I have a Bachelor of Arts degree and run my own business.
+									Beyond my professional life, I am also a national-level athlete specializing in the
+									100 and 200-meter sprints. Balancing my passion for sports and my entrepreneurial
+									journey has been incredibly rewarding. I strive for excellence in everything I do,
+									whether it's on the track or in the boardroom. I am thrilled to start this new
+									chapter with the love of my life by my side.
 								</p>
 							</div>
 						</div>
@@ -155,7 +161,12 @@
 								<h2> <i class="fa fa-heart-o" aria-hidden="true"></i> <span>Nikita</span> <i
 										class="fa fa-heart-o" aria-hidden="true"></i></h2>
 								<p>
-									Hi, I'm Nikita. I graduated with a Bachelor of Arts degree and have since pursued my passion for fashion design and makeup artistry. I love creating unique and stylish looks that make people feel confident and beautiful. My journey in the fashion industry has been incredibly fulfilling, and I strive to bring creativity and elegance to everything I do. As I step into this new phase of life, I am excited to share it with my wonderful partner.
+									Hi, I'm Nikita. I graduated with a Bachelor of Arts degree and have since pursued my
+									passion for fashion design and makeup artistry. I love creating unique and stylish
+									looks that make people feel confident and beautiful. My journey in the fashion
+									industry has been incredibly fulfilling, and I strive to bring creativity and
+									elegance to everything I do. As I step into this new phase of life, I am excited to
+									share it with my wonderful partner.
 								</p>
 							</div>
 						</div>
@@ -216,7 +227,9 @@
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">After our initial meeting at our friends' wedding, We met at Aadharsh Stadium when I was there for an athletic event. We shared stories and laughed. It was the perfect start to our journey together.</p>
+								<p class="lead">After our initial meeting at our friends' wedding, We met at Aadharsh
+									Stadium when I was there for an athletic event. We shared stories and laughed. It
+									was the perfect start to our journey together.</p>
 							</div>
 						</div>
 					</div>
@@ -234,7 +247,9 @@
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">On our first date at Aadharsh Stadium, I won a medal in athletics. Filled with joy and excitement, I proposed to her right there. It was a magical moment that marked the beginning of our beautiful journey together.</p>
+								<p class="lead">On our first date at Aadharsh Stadium, I won a medal in athletics.
+									Filled with joy and excitement, I proposed to her right there. It was a magical
+									moment that marked the beginning of our beautiful journey together.</p>
 							</div>
 						</div>
 					</div>
@@ -252,7 +267,9 @@
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">We celebrated our engagement surrounded by our loving families. It was a joyous occasion filled with love, laughter, and the promise of a beautiful future together.
+								<p class="lead">We celebrated our engagement surrounded by our loving families. It was a
+									joyous occasion filled with love, laughter, and the promise of a beautiful future
+									together.
 								</p>
 							</div>
 						</div>
@@ -271,7 +288,9 @@
 								</div>
 							</div>
 							<div class="textContent">
-								<p class="lead">On 18 January 2025, we will be tying the knot and beginning our lifelong journey together. Surrounded by our loved ones, we look forward to celebrating this special day filled with love, joy, and cherished memories.</p>
+								<p class="lead">On 18 January 2025, we will be tying the knot and beginning our lifelong
+									journey together. Surrounded by our loved ones, we look forward to celebrating this
+									special day filled with love, joy, and cherished memories.</p>
 							</div>
 						</div>
 					</div>
@@ -453,7 +472,9 @@
 						<h3 class="title">Bandoli Ceremony</h3>
 						<!-- <h4>17 January 2025 at 9:00 pm</h4> -->
 						<p class="description">
-							The Bandoli Ceremony marks the joyous beginning of wedding festivities, filled with music, dance, and blessings from loved ones. It symbolizes the union of two families and the start of a new journey for the couple.
+							The Bandoli Ceremony marks the joyous beginning of wedding festivities, filled with music,
+							dance, and blessings from loved ones. It symbolizes the union of two families and the start
+							of a new journey for the couple.
 						</p>
 					</div>
 				</div>
@@ -464,7 +485,9 @@
 						<h3 class="title">Wedding Ceremony </h3>
 						<!-- <h4>18 January 2025 at 2:40 pm</h4> -->
 						<p class="description">
-							The Wedding Ceremony is a sacred event where two souls unite in matrimony, surrounded by the blessings and love of family and friends. It marks the beginning of a lifelong journey together, filled with joy and commitment.
+							The Wedding Ceremony is a sacred event where two souls unite in matrimony, surrounded by the
+							blessings and love of family and friends. It marks the beginning of a lifelong journey
+							together, filled with joy and commitment.
 						</p>
 					</div>
 				</div>
@@ -475,17 +498,19 @@
 						<h3 class="title">Reception Ceremony </h3>
 						<!-- <h4>20 January 2025 at 6:00 pm</h4> -->
 						<p class="description">
-							The Reception Ceremony is a joyous celebration where family and friends gather to congratulate the newlyweds and share in their happiness. It marks the beginning of their new journey together, filled with love and support.
+							The Reception Ceremony is a joyous celebration where family and friends gather to
+							congratulate the newlyweds and share in their happiness. It marks the beginning of their new
+							journey together, filled with love and support.
 						</p>
 					</div>
 				</div>
 			</div>
-			
+
 		</div>
 	</div>
 
 	<!-- End Wedding -->
-	
+
 	<!-- Start Events -->
 	<div id="events" class="events-box">
 		<div class="container">
@@ -505,8 +530,11 @@
 						</div>
 						<h2><b>Bandoli Ceremony</b></h2>
 						<h4>17 January 2025 at 9:00 pm</h4>
-						<p>Join us for the Bandoli Ceremony as we celebrate the beginning of our wedding festivities. Your presence will add joy to this special occasion.</p>
-						<a href="https://www.google.com/maps/place/25%C2%B049'38.5%22N+72%C2%B015'37.9%22E/@25.8273714,72.2579505,17z/data=!3m1!4b1!4m4!3m3!8m2!3d25.8273714!4d72.2605254?hl=en&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" >See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+						<p>Join us for the Bandoli Ceremony as we celebrate the beginning of our wedding festivities.
+							Your presence will add joy to this special occasion.</p>
+						<a
+							href="https://www.google.com/maps/place/25%C2%B049'38.5%22N+72%C2%B015'37.9%22E/@25.8273714,72.2579505,17z/data=!3m1!4b1!4m4!3m3!8m2!3d25.8273714!4d72.2605254?hl=en&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">See
+							location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
@@ -516,8 +544,10 @@
 						</div>
 						<h2><b>Wedding Ceremony</b></h2>
 						<h4>18 January 2025 at 2:40 pm</h4>
-						<p>We invite you to witness the union of our souls in the sacred Wedding Ceremony. Your blessings and presence will make this day even more memorable.</p>
-						<a href="https://maps.app.goo.gl/hV8KTYXdqk9HUm2YA" >See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+						<p>We invite you to witness the union of our souls in the sacred Wedding Ceremony. Your
+							blessings and presence will make this day even more memorable.</p>
+						<a href="https://maps.app.goo.gl/hV8KTYXdqk9HUm2YA">See location <i
+								class="fa fa-angle-double-right" aria-hidden="true"></i></a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-12">
@@ -527,11 +557,14 @@
 						</div>
 						<h2><b>Reception Ceremony</b></h2>
 						<h4>20 January 2025 at 6:00 pm</h4>
-						<p>Celebrate with us at the Reception Ceremony as we embark on this new journey together. We look forward to sharing this joyous evening with you.</p>
-						<a href="https://www.google.com/maps?q=25.8255074,72.2589901&z=17&hl=en" >See location <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+						<p>Celebrate with us at the Reception Ceremony as we embark on this new journey together. We
+							look forward to sharing this joyous evening with you.</p>
+						<a href="https://www.google.com/maps?q=25.8255074,72.2589901&z=17&hl=en">See location <i
+								class="fa fa-angle-double-right" aria-hidden="true"></i></a>
 					</div>
 				</div>
-				<p class="thankyou">"Your presence will make our celebration complete. Thank you for being a part of our special day and for your love and support."</p>
+				<p class="thankyou">"Your presence will make our celebration complete. Thank you for being a part of our
+					special day and for your love and support."</p>
 			</div>
 		</div>
 	</div>
@@ -619,8 +652,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<p class="footer-company-name">All Rights Reserved. &copy; 2025 <a href="https://github.com/Hemraj-7">Hemraj-7</a> Design
+					<p class="footer-company-name">All Rights Reserved. &copy; 2025 <a
+							href="https://github.com/Hemraj-7">Hemraj-7</a> Design
 						By : <a href="https://www.instagram.com/hemraj__parihar/">Hemraj</a></p>
+					<p class="footer-company-name">Contact me if you want to build a website</p>
 				</div>
 			</div>
 		</div>
