--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 						<!-- <li><a class="nav-link" href="#gallery">Gallery</a></li> -->
 						<li><a class="nav-link" href="#wedding">Wedding</a></li>
 						<li><a class="nav-link" href="#events">Events</a></li>
+						<li><a class="nav-link" href="#wishes">Wishes</a></li>
 						<!-- <li><a class="nav-link" href="#contact">Contact</a></li> -->
 					</ul>
 				</div>
@@ -563,8 +564,8 @@
 								class="fa fa-angle-double-right" aria-hidden="true"></i></a>
 					</div>
 				</div>
-				<p class="thankyou">"Your presence will make our celebration complete. Thank you for being a part of our
-					special day and for your love and support."</p>
+				<p class="thankyou">Your presence will make our celebration complete. Thank you for being a part of our
+					special day and for your love and support.</p>
 			</div>
 		</div>
 	</div>
@@ -646,6 +647,67 @@
 		</div>
 	</div> -->
 	<!-- End Contact -->
+
+	<div id="wishes" class="wedding-box">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="title-box">
+						<h2>Wishes</h2>
+						<p>Best wishes form the friends and families</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="row align-items-center">
+				<div class="col-md-4 col-sm-6">
+					<div class="serviceBox">
+						<!-- <div class="service-icon"><i class="flaticon-bachelorette-party"></i></div> -->
+						<!-- <h3 class="title">Hemraj</h3> -->
+						<p class="description">
+						<p class="description"><b>Dear Nikhil and Nikita,</b></p>
+						"Congratulations to you both! Your wedding is the start of an exciting adventure together. May
+						this new chapter bring you love, joy, and countless unforgettable memories. I’m thrilled to see
+						how you’ll grow together as a couple. Wishing you both a life full of happiness and dreams come
+						true!"
+						<p class="description">With warmest wishes, <a href=""><b>Jitendra</b></a></p>
+						</p>
+					</div>
+				</div>
+
+				<div class="col-md-4 col-sm-6">
+					<div class="serviceBox">
+						<!-- <div class="service-icon"><i class="flaticon-wedding"></i></div>
+						<h3 class="title">Wedding Ceremony </h3> -->
+						<p class="description">
+						<p class="description"><b>Dear Nikhil and Nikita,</b></p>
+						"Congratulations to you both! Wishing you both a marriage full of deep love, laughter, and
+						lasting happiness. May you continue to inspire each other and build a life filled with joy. I
+						look forward to watching your beautiful journey together unfold. Wishing you both all the best
+						as you begin this new chapter!"
+						<p class="description">With warmest wishes, <a href="https://www.instagram.com/hemraj__parihar/"><b>Hemraj</b></a></p>
+						</p>
+					</div>
+				</div>
+
+				<div class="col-md-4 col-sm-6">
+					<div class="serviceBox">
+						<!-- <div class="service-icon"><i class="flaticon-reception-bell"></i></div>
+						<h3 class="title">Reception Ceremony </h3> -->
+						<p class="description">
+						<p class="description"><b>Dear Nikhil and Nikita,</b></p>
+						"Congratulations to you both! Marriage is built on love, trust, and respect. May you always
+						support each other through all the ups and downs. I’m excited to see how your bond will grow
+						even stronger over the years. Wishing you both a lifetime of shared strength and beautiful
+						moments!"
+						<p class="description">With warmest wishes, <a href=""><b>Vijay</b></a></p>
+						</p>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
 
 	<!-- Start Footer -->
 	<footer class="footer-box">
